[project]
name = "saberdb"
version = "0.1.0"
description = "Storing baseball data in a SQLite database."
authors = [
    {name = "Matthew Cooper",email = "matthew.cooper@pobox.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peewee (>=3.18.2,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pybaseball (>=2.2.7,<3.0.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = ">=9.4.0,<10.0.0"
mypy = ">=1.17.1,<2.0.0"
types-peewee = "^3.18.2.20250710"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
